# sour-verification

./: .gitignore  Cargo.toml  LICENSE  README.md
.certora_internal/: latest
.certora_internal/26_05_03_10_08_25_9055168465/: .certora_metadata.json  certora_debug_log.txt
.certora_internal/26_05_03_10_10_56_751980b0c9/: .certora_metadata.json  .configuration_layout.json  certora_debug_log.txt
.certora_internal/26_05_03_10_10_56_751980b0c9/.certora_sources/: run.conf
.certora_internal/26_05_03_10_41_01_915323d3e9/: .certora_metadata.json  certora_debug_log.txt
.certora_internal/26_05_03_10_43_36_5379723a4f/: .certora_metadata.json  .configuration_layout.json  certora_debug_log.txt  run.conf
.certora_internal/26_05_03_11_32_56_870821ed30/: .certora_metadata.json  certora_debug_log.txt
certora/sour-cvlr/: Cargo.toml  README.md
certora/sour-cvlr/src/: lib.rs
crates/sour-verifier/: Cargo.toml
crates/sour-verifier/src/: accounting.rs  aggregate.rs  exact.rs  kani_harnesses.rs  lib.rs  max_oi.rs  upsert_slot.rs
crates/sour-verifier/tests/: accounting_invariants.rs  sour_breakdown_cases.rs
docs/: 2026-05-03-post-redeploy-verification-handoff.md  fix-implementation-spec.md  historical-2026-05-03-fix-implementation-spec.md  instruction-verification-targets.md
docs/superpowers/plans/: 2026-05-03-sour-verification-plan.md
docs/superpowers/specs/: 2026-05-03-sour-verification-design.md
lean/: lake-manifest.json  lakefile.lean
lean/SourVerification/Sour/: NoBadDebt.lean
scripts/: kani-expected-failures.sh  kani.sh  test-breakdowns.sh  test-green.sh
(+2 files in other folders)
